# wren-cli

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/cli/: main.c  modules.c  modules.h  path.c  path.h  stat.h  vm.c
src/module/: io.c  os.c  scheduler.c
